welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:26: error: not found: value position
     position()
     ^